# shawty_bot

./: .gitignore  Cargo.toml  README.md
assets/: activities.json  bonk_locations.json
src/: bonker.rs  main.rs  scheduler.rs  test.rs
